# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
#

2004-06-17 22:02:46 GMT	John Goerzen <jgoerzen@complete.org>	patch-36

    Summary:
      Working on abspath
    Revision:
      missinglib--head--0.0--patch-36


    new files:
     test/testfileutil.ml

    modified files:
     ChangeLog README debian/changelog libsrc/Makefile
     libsrc/compose/compose.mli libsrc/compose/composeoper.mli
     libsrc/fileutil/fileutil.ml libsrc/fileutil/fileutil.mli
     libsrc/listutil/listutil.ml libsrc/listutil/listutil.mli
     libsrc/streamutil/streamutil.ml
     libsrc/streamutil/streamutil.mli libsrc/unixutil/unixutil.ml
     libsrc/unixutil/unixutil.mli test/Makefile test/runtests.ml
     test/testutil.ml


2004-06-17 20:30:26 GMT	John Goerzen <jgoerzen@complete.org>	patch-35

    Summary:
      Added take/drop list support
    Revision:
      missinglib--head--0.0--patch-35


    modified files:
     ChangeLog libsrc/listutil/listutil.ml
     libsrc/listutil/listutil.mli libsrc/streamutil/streamutil.ml
     test/testlistutil.ml


2004-06-17 18:49:02 GMT	John Goerzen <jgoerzen@complete.org>	patch-34

    Summary:
      Fixed bugs detected by tests
    Revision:
      missinglib--head--0.0--patch-34


    modified files:
     ChangeLog libsrc/streamutil/streamutil.ml
     test/teststreamutil.ml


2004-06-17 18:33:20 GMT	John Goerzen <jgoerzen@complete.org>	patch-33

    Summary:
      Starting tests
    Revision:
      missinglib--head--0.0--patch-33


    new files:
     test/teststreamutil.ml

    modified files:
     ChangeLog libsrc/Makefile libsrc/streamutil/streamutil.ml
     libsrc/streamutil/streamutil.mli test/Makefile
     test/runtests.ml


2004-06-17 15:58:20 GMT	John Goerzen <jgoerzen@complete.org>	patch-32

    Summary:
      Several updates
    Revision:
      missinglib--head--0.0--patch-32

    Added doc-base support
    
    Added skeleton Unixutil support
