@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missinglib--head--0.0
 #
 
+2004-06-17 22:10:25 GMT	John Goerzen <jgoerzen@complete.org>	patch-37
+
+    Summary:
+      Working on abspath
+    Revision:
+      missinglib--head--0.0--patch-37
+
+
+    modified files:
+     ChangeLog libsrc/fileutil/fileutil.ml test/testfileutil.ml
+
+
 2004-06-17 22:02:46 GMT	John Goerzen <jgoerzen@complete.org>	patch-36
 
     Summary:
